--- a/app/scss/base/_utilities.scss
+++ b/app/scss/base/_utilities.scss
@@ -4,7 +4,7 @@
     visibility: visible;
 
 }
-.header__top__menu.show_menu{
+.header__menu.show_menu{
     span:nth-child(1){
         transform: rotate(45deg);
     }
